# cmake-multiple_projects

./: CMakeLists.txt  README.md  notes.txt  todo.txt
project1/: CMakeLists.txt  main.c
project2/: CMakeLists.txt  main.c
